--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "goit-pythonweb-hw-10"
-version = "0.2.0"
+name = "goit-pythonweb-hw-12"
+version = "0.3.0"
 description = ""
 authors = ["Sergii <kryvkosergii@gmail.com>"]
 readme = "README.md"
@@ -22,7 +22,11 @@ bcrypt = "==3.2.2"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 fastapi-mail = "^1.4.2"
 slowapi = "^0.1.9"
+redis = "^5.2.1"
 
+
+[tool.poetry.group.dev.dependencies]
+sphinx = "^8.1.3"
 
 [build-system]
 requires = ["poetry-core"]
