--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 services:
   goit-pythonweb-hw-12-db:
+    container_name: goit-pythonweb-hw-12-db
     image: postgres:12
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
@@ -10,10 +11,12 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
   goit-pythonweb-hw-12-redis:
+    container_name: goit-pythonweb-hw-12-redis
     image: redis:7.4.2
     ports:
       - "6379:6379"
   goit-pythonweb-hw-12-app:
+    container_name: goit-pythonweb-hw-12-app
     build: .
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
