--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 fastapi-mail = "^1.4.2"
 slowapi = "^0.1.9"
 redis = "^5.2.1"
+pytest = "^8.3.4"
+pytest-asyncio = "^0.25.3"
+aiosqlite = "^0.21.0"
 
 
 [tool.poetry.group.dev.dependencies]
