--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,25 +15,25 @@ services:
     image: redis:7.4.2
     ports:
       - "6379:6379"
-  goit-pythonweb-hw-12-app:
-    container_name: goit-pythonweb-hw-12-app
-    build: .
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_PORT: ${POSTGRES_PORT}
-      POSTGRES_HOST: goit-pythonweb-hw-12-db
-      MAIL_USERNAME: ${MAIL_USERNAME}
-      MAIL_PASSWORD: ${MAIL_PASSWORD}
-      MAIL_FROM: ${MAIL_FROM}
-      CLOUDINARY_NAME: ${CLOUDINARY_NAME}
-      CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
-      CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
-      REDIS_HOST:  goit-pythonweb-hw-12-redis
-      REDIS_PORT: ${REDIS_PORT}
-    ports:
-      - "8000:8000"
-    depends_on:
-      - goit-pythonweb-hw-12-db
-      - goit-pythonweb-hw-12-redis
+  # goit-pythonweb-hw-12-app:
+  #   container_name: goit-pythonweb-hw-12-app
+  #   build: .
+  #   environment:
+  #     POSTGRES_DB: ${POSTGRES_DB}
+  #     POSTGRES_USER: ${POSTGRES_USER}
+  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  #     POSTGRES_PORT: ${POSTGRES_PORT}
+  #     POSTGRES_HOST: goit-pythonweb-hw-12-db
+  #     MAIL_USERNAME: ${MAIL_USERNAME}
+  #     MAIL_PASSWORD: ${MAIL_PASSWORD}
+  #     MAIL_FROM: ${MAIL_FROM}
+  #     CLOUDINARY_NAME: ${CLOUDINARY_NAME}
+  #     CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
+  #     CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
+  #     REDIS_HOST:  goit-pythonweb-hw-12-redis
+  #     REDIS_PORT: ${REDIS_PORT}
+  #   ports:
+  #     - "8000:8000"
+  #   depends_on:
+  #     - goit-pythonweb-hw-12-db
+  #     - goit-pythonweb-hw-12-redis
