--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,6 @@ sphinx = "^8.1.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
