* add redis config example

--- a/.env-example
+++ b/.env-example
@@ -11,3 +11,7 @@ MAIL_FROM=<provide parameter>
 CLOUDINARY_NAME=<provide parameter>
 CLOUDINARY_API_KEY=<provide parameter>
 CLOUDINARY_API_SECRET=<provide parameter>
+
+REDIS_PORT=6379
+REDIS_HOST=localhost
+REDIS_DB=0
