--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ aiosqlite = "^0.21.0"
 
 [tool.poetry.group.dev.dependencies]
 sphinx = "^8.1.3"
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
